--- a/chai-aur-react/nutrition-tracker/src/App.css
+++ b/chai-aur-react/nutrition-tracker/src/App.css
@@ -53,3 +53,25 @@
   text-decoration: none;
   color: #167ce0;
 }
+.success {
+  background-color: lightgreen;
+  color: green;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 1;
+}
+.invisibility-msg {
+  opacity: 0;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+}
+.error {
+  background-color: lightpink;
+  color: red;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 1;
+}
