--- a/seema-holiday-developer/sorting/src/components/Sorting.css
+++ b/seema-holiday-developer/sorting/src/components/Sorting.css
@@ -7,3 +7,10 @@ td {
   border: 1px solid black;
   padding: 8px;
 }
+input {
+  border: 2px solid;
+  margin: 20px 10px 20px 20px;
+  padding: 4px;
+  border-radius: 5px;
+  font-size: 25px;
+}
