--- a/roadsidecoder/taskify-typescript/src/components/TaskListItem.css
+++ b/roadsidecoder/taskify-typescript/src/components/TaskListItem.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
 }
 .icons {
   display: grid;
